// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Affix 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Hvor mange kroner koster det per måned?
  </label>
  <div>
    <span aria-hidden="true">
      NOK
    </span>
    <input
      id="<removed>"
      inputmode="numeric"
      type="text"
    >
    <span aria-hidden="true">
      pr. mnd
    </span>
  </div>
</ds-field>
`;

exports[`Controlled 1`] = `
<div style="display: flex; gap: var(--ds-size-2); align-items: end; width: 100%;">
  <ds-field style="flex-grow: 1;">
    <label
      data-weight="medium"
      for="<removed>"
    >
      Fullt navn
    </label>
    <div>
      <input
        id="<removed>"
        type="text"
        value
      >
    </div>
  </ds-field>
  <button
    data-variant="secondary"
    type="button"
  >
    Tøm feltet
  </button>
</div>
`;

exports[`Counter 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Legg til en beskrivelse
  </label>
  <div>
    <textarea
      aria-describedby="<removed>"
      id="<removed>"
      rows="4"
      style="--_ds-field-sizing: <removed>;"
    >
    </textarea>
  </div>
  <p
    data-field="counter"
    data-label="75 tegn igjen"
    data-limit="75"
    data-state="under"
    id="<removed>"
  >
  </p>
</ds-field>
`;

exports[`Disabled 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Disabled Textfield
  </label>
  <div>
    <input
      disabled
      id="<removed>"
      type="text"
    >
  </div>
</ds-field>
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Disabled multiline Textfield
  </label>
  <div>
    <textarea
      disabled
      id="<removed>"
      rows="4"
      style="--_ds-field-sizing: <removed>;"
    >
    </textarea>
  </div>
</ds-field>
`;

exports[`Focused 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Label
  </label>
  <div>
    <input
      id="<removed>"
      type="text"
    >
  </div>
</ds-field>
`;

exports[`Format 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Fødselsnummer
  </label>
  <div>
    <input
      id="<removed>"
      inputmode="numeric"
      type="text"
    >
  </div>
</ds-field>
`;

exports[`Preview 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Label
  </label>
  <div>
    <input
      id="<removed>"
      type="text"
    >
  </div>
</ds-field>
`;

exports[`Read Only 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    ReadOnly Textfield
  </label>
  <div>
    <input
      id="<removed>"
      readonly
      type="text"
    >
  </div>
</ds-field>
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    ReadOnly multiline Textfield
  </label>
  <div>
    <textarea
      id="<removed>"
      readonly
      rows="4"
      style="--_ds-field-sizing: <removed>;"
    >
    </textarea>
  </div>
</ds-field>
`;

exports[`Rows 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Beskrivelse
  </label>
  <div>
    <textarea
      id="<removed>"
      rows="4"
      style="--_ds-field-sizing: <removed>;"
    >
    </textarea>
  </div>
</ds-field>
`;
